--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <script type="module" src="./test/demo.web.ts"></script>
+
+    <!-- UMD Module Demo -->
+    <!-- <script src="./dist/index.min.js"></script>
+    <script>
+      console.log(UTILS.helloWorld());
+    </script> -->
   </body>
 </html>
